--- a/resources/assets/less/variables.less
+++ b/resources/assets/less/variables.less
@@ -7,14 +7,15 @@
 //
 //## Gray and brand colors for use across Bootstrap.
 
-@gray-base:              #000;
+@RZColor:                #e25e21;
+@gray-base:              @RZColor;	//#000;
 @gray-darker:            lighten(@gray-base, 13.5%); // #222
 @gray-dark:              lighten(@gray-base, 20%);   // #333
 @gray:                   lighten(@gray-base, 33.5%); // #555
 @gray-light:             lighten(@gray-base, 46.7%); // #777
 @gray-lighter:           lighten(@gray-base, 93.5%); // #eee
 
-@brand-primary:         #f0ad4e; //darken(#428bca, 6.5%); // #337ab7
+@brand-primary:         @RZColor;	//#337ab7;
 @brand-success:         #5cb85c;
 @brand-info:            #5bc0de;
 @brand-warning:         #f0ad4e;
@@ -26,7 +27,7 @@
 //## Settings for some of the most global styles.
 
 //** Background color for `<body>`.
-@body-bg:               lighten(@brand-primary,80%);  //#fff;
+@body-bg:               lighten(@brand-primary,50%);  //#fff;
 //** Global text color on `<body>`.
 @text-color:            @gray-dark;
 
