--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -1065,7 +1065,7 @@ html {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 body {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-size: 14px;
   line-height: 1.42857143;
   color: #ee9f7b;
@@ -1504,7 +1504,7 @@ code,
 kbd,
 pre,
 samp {
-  font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
+  font-family: Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
 code {
   padding: 2px 4px;
@@ -5138,8 +5138,8 @@ a.list-group-item:focus {
   color: #fae1d5;
 }
 .list-group-item-success {
-  color: #3c763d;
   background-color: #dff0d8;
+  color: #3c763d;
 }
 a.list-group-item-success {
   color: #3c763d;
@@ -5149,19 +5149,19 @@ a.list-group-item-success .list-group-item-heading {
 }
 a.list-group-item-success:hover,
 a.list-group-item-success:focus {
-  color: #3c763d;
   background-color: #d0e9c6;
+  color: #3c763d;
 }
 a.list-group-item-success.active,
 a.list-group-item-success.active:hover,
 a.list-group-item-success.active:focus {
-  color: #fff;
   background-color: #3c763d;
+  color: #fff;
   border-color: #3c763d;
 }
 .list-group-item-info {
-  color: #31708f;
   background-color: #d9edf7;
+  color: #31708f;
 }
 a.list-group-item-info {
   color: #31708f;
@@ -5171,19 +5171,19 @@ a.list-group-item-info .list-group-item-heading {
 }
 a.list-group-item-info:hover,
 a.list-group-item-info:focus {
-  color: #31708f;
   background-color: #c4e3f3;
+  color: #31708f;
 }
 a.list-group-item-info.active,
 a.list-group-item-info.active:hover,
 a.list-group-item-info.active:focus {
-  color: #fff;
   background-color: #31708f;
+  color: #fff;
   border-color: #31708f;
 }
 .list-group-item-warning {
-  color: #8a6d3b;
   background-color: #fcf8e3;
+  color: #8a6d3b;
 }
 a.list-group-item-warning {
   color: #8a6d3b;
@@ -5193,19 +5193,19 @@ a.list-group-item-warning .list-group-item-heading {
 }
 a.list-group-item-warning:hover,
 a.list-group-item-warning:focus {
-  color: #8a6d3b;
   background-color: #faf2cc;
+  color: #8a6d3b;
 }
 a.list-group-item-warning.active,
 a.list-group-item-warning.active:hover,
 a.list-group-item-warning.active:focus {
-  color: #fff;
   background-color: #8a6d3b;
+  color: #fff;
   border-color: #8a6d3b;
 }
 .list-group-item-danger {
-  color: #a94442;
   background-color: #f2dede;
+  color: #a94442;
 }
 a.list-group-item-danger {
   color: #a94442;
@@ -5215,14 +5215,14 @@ a.list-group-item-danger .list-group-item-heading {
 }
 a.list-group-item-danger:hover,
 a.list-group-item-danger:focus {
-  color: #a94442;
   background-color: #ebcccc;
+  color: #a94442;
 }
 a.list-group-item-danger.active,
 a.list-group-item-danger.active:hover,
 a.list-group-item-danger.active:focus {
-  color: #fff;
   background-color: #a94442;
+  color: #fff;
   border-color: #a94442;
 }
 .list-group-item-heading {
@@ -5765,7 +5765,7 @@ button.close {
   position: absolute;
   z-index: 1070;
   display: block;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-size: 12px;
   font-weight: normal;
   line-height: 1.4;
@@ -5872,7 +5872,7 @@ button.close {
   display: none;
   max-width: 276px;
   padding: 1px;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-size: 14px;
   font-weight: normal;
   line-height: 1.42857143;
